# fastapi-login

./: .dockerignore  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  users.py
backend/app/model/: __init__.py  mixins.py  person.py  role.py  user_role.py  users.py
backend/app/repository/: auth_repo.py  base_repo.py  role.py  users.py
backend/app/service/: auth_service.py  users.py
backend/migrations/versions/: c3a1c38e1c72_initial_migration.py
frontend/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/src/: App.js
frontend/src/form/: Register.js
