[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ketov Daniil <ketov.daniil123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
sqlmodel = "^0.0.8"
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start="app.main:start"
